Another minor spacing fix

--- a/maps [22896]/Maps (site) [28210]/Assets [28211]/CSS [64841]/map-styles[64842].css
+++ b/maps [22896]/Maps (site) [28210]/Assets [28211]/CSS [64841]/map-styles[64842].css
@@ -41,6 +41,11 @@ div.mapboxgl-popup-content p {
 .cell.map_cell {
 	padding-right: 0;
 }
+@media screen and (max-width: 769px) {
+	.cell.map-info {
+		padding-right: 0;
+	}
+}
 .map_cell .tabs__panel {padding:0;}
 ul.social-list, .more-sharing {padding-bottom:1rem;}
 .more-sharing button.modal-dialog__open {
